--- a/src/Components/Friends/style.css
+++ b/src/Components/Friends/style.css
@@ -75,6 +75,10 @@
   font-size: 14px;
 }
 
+.friends-btn button:nth-child(2){
+  margin-top: 10px;
+}
+
 .friends-btn button:hover{
     background: red;
 }
