--- a/src/Components/MyGroups/style.css
+++ b/src/Components/MyGroups/style.css
@@ -1,5 +1,5 @@
 .my-groups-main {
-    margin-top: 25px;
+  margin-top: 25px;
   background: #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 10px;
@@ -66,7 +66,7 @@
 .my-groups-btn button {
   width: 100%;
   padding: 10px 20px;
-  background: red;
+  background: var(--blue);
   outline: none;
   border: 0;
   color: #ffffff;
@@ -77,7 +77,11 @@
 }
 
 .my-groups-btn button:hover {
-  background: red;
+  background: var(--blue);
+}
+
+.my-groups-btn button:nth-child(2){
+  margin-top: 10px;
 }
 
 .my-groups-body::-webkit-scrollbar {
@@ -102,4 +106,29 @@
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+}
+
+.my-groups-text h3 {
+  color: var(--primary-color);
+  font-size: 18px;
+  font-weight: 700;
+  font-family: var(--primary-font);
+}
+
+.my-groups-text h4 {
+  color: var(--secondary-color);
+  font-family: var(--secondary-font);
+  font-size: 16px;
+  font-weight: 700;
+  padding: 5px 0;
+}
+
+.groups_title {
+  color: var(--third-color);
+  font-size: 14px;
+}
+
+.alert_1{
+  font-size: 18px !important;
+  align-items: center !important;
 }
