--- a/src/Components/MyGroups/style.css
+++ b/src/Components/MyGroups/style.css
@@ -131,4 +131,9 @@
 .alert_1{
   font-size: 18px !important;
   align-items: center !important;
+  margin: 10px 0;
+}
+
+.reject-btn{
+  background: red !important;
 }
