--- a/src/Components/UserList/style.css
+++ b/src/Components/UserList/style.css
@@ -9,7 +9,7 @@
 }
 
 .user-list-body {
-  height: 47vh;
+  height: 41vh;
   overflow: auto;
   padding: 0 20px;
 }
@@ -97,6 +97,22 @@
 .user-list-body::-webkit-scrollbar-track {
   height: 100%;
   /* background: #d1d6e1; */
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.search_box{
+  margin: 10px 0;
+}
+
+.search_box .search-wrapper {
+  width: 90%;
+  margin: 0 auto;
+  padding: 10px;
+  box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.25);
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
